--- a/src/App.scss
+++ b/src/App.scss
@@ -335,6 +335,8 @@ body {
     color: #cacaca;
     white-space: nowrap;
 
+    cursor: pointer;
+
     transition: 0.3s color;
     &:hover {
       color: #fff;
